--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -15,8 +15,8 @@ jobs:
     if: github.event_name == 'pull_request_target'
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write  # Allow posting comments on PR
-      issues: write         # Allow posting comments on issues
+      issues: write # Allow posting comments on issues/PRs
+      pull-requests: write # Allow writing to pull requests
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0634a2670c59f64b4a01f0f96f84700a4088b9f0 # v2.12.0
@@ -26,22 +26,24 @@ jobs:
       - name: Checkout main branch first
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
+      - name: Setup GitHub App Bot
+        id: setup-bot
+        uses: ./.github/actions/setup-bot
+        with:
+          app-id: ${{ secrets.GH_APP_ID }}
+          private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+
       # - name: Set up Python
       #   uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
       #   with:
       #     python-version: "3.12"
-
-      - name: Cache Python dependencies
-        uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
+      #     cache: "pip"
 
       - name: Get PR data
         id: get-pr-data
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
+          github-token: ${{ steps.setup-bot.outputs.token }}
           script: |
             const prNumber = context.payload.pull_request.number;
             const repoOwner = context.payload.repository.owner.login;
@@ -62,16 +64,17 @@ jobs:
       # - name: Fetch PR changed files
       #   id: fetch-pr-changes
       #   env:
-      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     GH_TOKEN: ${{ steps.setup-bot.outputs.token }}
       #   run: |
       #     echo "Fetching PR changed files..."
       #     echo "Getting list of changed files from PR..."
       #     gh pr view ${{ steps.get-pr-data.outputs.pr_number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}\.properties$' > changed_files.txt # Filter only matching property files
 
-      - name: Determine reference file and fetch changed files
+      - name: Determine reference file test
         id: determine-file
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
+          github-token: ${{ steps.setup-bot.outputs.token }}
           script: |
             const fs = require("fs");
             const path = require("path");
@@ -79,9 +82,12 @@ jobs:
             const prNumber = ${{ steps.get-pr-data.outputs.pr_number }};
             const repoOwner = "${{ steps.get-pr-data.outputs.repo_owner }}";
             const repoName = "${{ steps.get-pr-data.outputs.repo_name }}";
+
             const prRepoOwner = "${{ github.event.pull_request.head.repo.owner.login }}";
             const prRepoName = "${{ github.event.pull_request.head.repo.name }}";
             const branch = "${{ steps.get-pr-data.outputs.branch }}";
+
+            console.log(`Determining reference file for PR #${prNumber}`);
 
             // Validate inputs
             const validateInput = (input, regex, name) => {
@@ -94,27 +100,27 @@ jobs:
             validateInput(repoName, /^[a-zA-Z0-9._-]+$/, "repository name");
             validateInput(branch, /^[a-zA-Z0-9._/-]+$/, "branch name");
 
-            // Get changed files
+            // Get the list of changed files in the PR
             const { data: files } = await github.rest.pulls.listFiles({
               owner: repoOwner,
               repo: repoName,
               pull_number: prNumber,
             });
 
+            // Filter for relevant files based on the PR changes
             const changedFiles = files
               .map(file => file.filename)
               .filter(file => /^src\/main\/resources\/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}\.properties$/.test(file));
 
             console.log("Changed files:", changedFiles);
-            core.setOutput("changed_files", changedFiles.join(" "));
 
-            // Create temp directory for PR files
+            // Create a temporary directory for PR files
             const tempDir = "pr-branch";
             if (!fs.existsSync(tempDir)) {
               fs.mkdirSync(tempDir, { recursive: true });
             }
 
-            // Download changed files
+            // Download and save each changed file
             for (const file of changedFiles) {
               const { data: fileContent } = await github.rest.repos.getContent({
                 owner: prRepoOwner,
@@ -135,7 +141,10 @@ jobs:
               console.log(`Saved file: ${filePath}`);
             }
 
-            core.exportVariable("FILES_LIST", changedFiles.join(" "));
+            // Output the list of changed files for further processing
+            const fileList = changedFiles.join(" ");
+            core.exportVariable("FILES_LIST", fileList);
+            console.log("Files saved and listed in FILES_LIST.");
 
             // Determine reference file
             let referenceFilePath;
@@ -206,6 +215,7 @@ jobs:
         if: env.SCRIPT_OUTPUT != ''
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
+          github-token: ${{ steps.setup-bot.outputs.token }}
           script: |
             const { GITHUB_REPOSITORY, SCRIPT_OUTPUT } = process.env;
             const [repoOwner, repoName] = GITHUB_REPOSITORY.split('/');
@@ -221,7 +231,7 @@ jobs:
             const comment = comments.data.find(c => c.body.includes("## 🚀 Translation Verification Summary"));
 
             // Only update or create comments by the action user
-            const expectedActor = "github-actions[bot]";
+            const expectedActor = "${{ steps.setup-bot.outputs.app-slug }}[bot]";
 
             if (comment && comment.user.login === expectedActor) {
               // Update existing comment
