--- a/.github/workflows/check_prop.yml
+++ b/.github/workflows/check_prop.yml
@@ -61,14 +61,14 @@ jobs:
             core.setOutput("branch", branch);
         continue-on-error: true
 
-      # - name: Fetch PR changed files
-      #   id: fetch-pr-changes
-      #   env:
-      #     GH_TOKEN: ${{ steps.setup-bot.outputs.token }}
-      #   run: |
-      #     echo "Fetching PR changed files..."
-      #     echo "Getting list of changed files from PR..."
-      #     gh pr view ${{ steps.get-pr-data.outputs.pr_number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}\.properties$' > changed_files.txt # Filter only matching property files
+      - name: Fetch PR changed files
+        id: fetch-pr-changes
+        env:
+          GH_TOKEN: ${{ steps.setup-bot.outputs.token }}
+        run: |
+          echo "Fetching PR changed files..."
+          echo "Getting list of changed files from PR..."
+          gh pr view ${{ steps.get-pr-data.outputs.pr_number }} --json files -q ".files[].path" | grep -E '^src/main/resources/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}\.properties$' > changed_files.txt # Filter only matching property files
 
       - name: Determine reference file test
         id: determine-file
