--- a/.github/labeler-config-srvaroa.yml
+++ b/.github/labeler-config-srvaroa.yml
@@ -51,6 +51,7 @@ labels:
   - label: "Front End"
     files:
       - 'stirling-pdf/src/main/resources/templates/**/*'
+      - 'src/main/resources/templates/**/.*\..*'
       - 'stirling-pdf/src/main/resources/static/**/*'
       - 'stirling-pdf/src/main/java/stirling/software/SPDF/controller/web/**/*'
       - 'stirling-pdf/src/main/java/stirling/software/SPDF/UI/**/*'
