--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -72,14 +72,15 @@ jobs:
             **Change Scope:** ${{ steps.pr-info.outputs.change-scope }}
 
             Please provide:
-            1. A brief assessment of whether the current PR title is sufficiently clear and relevant to the Stirling-PDF project (e.g., reflects PDF operations like splitting, merging, converting, or project maintenance).
-            2. If the title is inadequate (e.g., too vague like "Peter" or not descriptive), suggest one improved PR title that accurately reflects the changes. Use conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keep it concise yet descriptive.
-            3. If a new title is suggested, provide a short explanation of why it better aligns with the changes, focusing on significant improvements over minor wording tweaks.
-            4. If the current title is already clear and appropriate, state that no change is needed and briefly explain why.
+            1. A rating of the current PR title on a scale of 1 to 10 (1 = worst, 10 = best), based on its clarity, relevance, and alignment with the changes.
+            2. A brief assessment of whether the current PR title is sufficiently clear and relevant to the Stirling-PDF project (e.g., reflects PDF operations like splitting, merging, converting, or project maintenance).
+            3. If the title is inadequate (e.g., too vague like "Peter" or not descriptive), suggest one improved PR title that accurately reflects the changes. Use conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keep it concise yet descriptive.
+            4. If a new title is suggested, provide a short explanation of why it better aligns with the changes, focusing on significant improvements over minor wording tweaks.
+            5. If the current title is already clear and appropriate, state that no change is needed and briefly explain why.
 
-            **Important**: Only suggest a new title if the current one is significantly deficient (e.g., too generic, misleading, or missing context). Avoid iterative refinements like changing "miscellaneous files" to "configuration and scripts" unless the improvement is substantial.
+            **Important**: Only suggest a new title if the current one is significantly deficient (e.g., too generic, misleading, or missing context, rating ≤ 5). Avoid iterative refinements like changing "miscellaneous files" to "configuration and scripts" unless the improvement is substantial.
 
-            Keep the response concise and formatted as markdown.
+            Keep the response concise and formatted as markdown, with the rating displayed prominently (e.g., "**Rating**: X/10").
 
       - name: Comment AI Title Suggestion
         env:
