--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -36,23 +36,52 @@ jobs:
         run: |
           # Collect PR title and changed files
           CHANGED_FILES=$(gh pr diff $PR_NUMBER --name-only)
+          # Collect diff content for changed files
+          DIFF_CONTENT=$(gh pr diff $PR_NUMBER)
 
           # Save to files for AI processing
           echo "$PR_TITLE" > $GITHUB_WORKSPACE/pr-title.txt
           echo "$CHANGED_FILES" > $GITHUB_WORKSPACE/changed-files.txt
+          echo "$DIFF_CONTENT" > $GITHUB_WORKSPACE/diff-content.txt
+
+          # Initialize change scope
+          CHANGE_SCOPE=""
 
           # Classify change scope based on file patterns specific to Stirling-PDF
           if [[ "$CHANGED_FILES" =~ ^src/main/java/stirling/software/SPDF/.* ]]; then
-            echo "change-scope=backend" >> $GITHUB_OUTPUT
-          elif [[ "$CHANGED_FILES" =~ ^src/main/resources/static/.* ]]; then
-            echo "change-scope=frontend" >> $GITHUB_OUTPUT
-          elif [[ "$CHANGED_FILES" =~ ^(Dockerfile.*|docker-compose.yml) ]]; then
-            echo "change-scope=deployment" >> $GITHUB_OUTPUT
-          elif [[ "$CHANGED_FILES" =~ ^docs/.* ]]; then
-            echo "change-scope=documentation" >> $GITHUB_OUTPUT
-          else
-            echo "change-scope=other" >> $GITHUB_OUTPUT
+            CHANGE_SCOPE="${CHANGE_SCOPE}backend,"
           fi
+          if [[ "$CHANGED_FILES" =~ ^src/main/resources/(static|templates)/.* ]]; then
+            CHANGE_SCOPE="${CHANGE_SCOPE}frontend,"
+          fi
+          if [[ "$CHANGED_FILES" =~ ^(Dockerfile.*|docker-compose.yml|src/main/resources/application.*\.properties) ]]; then
+            CHANGE_SCOPE="${CHANGE_SCOPE}deployment,"
+          fi
+          if [[ "$CHANGED_FILES" =~ ^docs/.* ]]; then
+            CHANGE_SCOPE="${CHANGE_SCOPE}documentation,"
+          fi
+          if [[ "$CHANGED_FILES" =~ ^src/test/.* ]]; then
+            CHANGE_SCOPE="${CHANGE_SCOPE}tests,"
+          fi
+          if [[ "$CHANGED_FILES" =~ ^\.github/workflows/.* ]]; then
+            CHANGE_SCOPE="${CHANGE_SCOPE}ci,"
+          fi
+          if [[ "$CHANGED_FILES" =~ ^main/resources/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}.properties ]]; then
+            CHANGE_SCOPE="${CHANGE_SCOPE}i18n,"
+          fi
+          if [[ "$CHANGED_FILES" =~ ^(build.gradle|README.md|\.gitignore) ]]; then
+            CHANGE_SCOPE="${CHANGE_SCOPE}config,"
+          fi
+
+          # Fallback for unclassified files
+          if [[ -z "$CHANGE_SCOPE" ]]; then
+            CHANGE_SCOPE="other"
+          else
+            # Remove trailing comma
+            CHANGE_SCOPE="${CHANGE_SCOPE%,}"
+          fi
+
+          echo "change-scope=$CHANGE_SCOPE" >> $GITHUB_OUTPUT
 
       - name: AI PR Title Analysis
         id: ai-title-analysis
@@ -60,7 +89,7 @@ jobs:
         with:
           model: openai/gpt-4o
           prompt: |
-            You are a senior software engineer reviewing a pull request for Stirling-PDF, a locally hosted web-based PDF manipulation tool. Your task is to evaluate the PR title and suggest improvements only if the current title is unclear, overly vague, or misaligned with the changes. Avoid minor or pedantic refinements.
+            You are a senior software engineer reviewing a pull request for Stirling-PDF, a locally hosted web-based PDF manipulation tool built with Gradle. Your task is to evaluate the PR title by analyzing the content of the changed files to understand the nature of the changes. Suggest improvements only if the current title is unclear, overly vague, or misaligned with the changes. Avoid minor or pedantic refinements.
 
             **PR Title:** ${{ github.event.pull_request.title }}
 
@@ -71,12 +100,17 @@ jobs:
 
             **Change Scope:** ${{ steps.pr-info.outputs.change-scope }}
 
+            **Diff Content:**
+            ```
+            $(cat $GITHUB_WORKSPACE/diff-content.txt)
+            ```
+
             Please provide:
-            1. A rating of the current PR title on a scale of 1 to 10 (1 = worst, 10 = best), based on its clarity, relevance, and alignment with the changes.
-            2. A brief assessment of whether the current PR title is sufficiently clear and relevant to the Stirling-PDF project (e.g., reflects PDF operations like splitting, merging, converting, or project maintenance).
-            3. If the title is inadequate (e.g., too vague like "Peter" or not descriptive), suggest one improved PR title that accurately reflects the changes. Use conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keep it concise yet descriptive.
-            4. If a new title is suggested, provide a short explanation of why it better aligns with the changes, focusing on significant improvements over minor wording tweaks.
-            5. If the current title is already clear and appropriate, state that no change is needed and briefly explain why.
+            1. A rating of the current PR title on a scale of 1 to 10 (1 = worst, 10 = best), based on its clarity, relevance, and alignment with the changes observed in the diff content.
+            2. A brief assessment of whether the current PR title is sufficiently clear and relevant to the Stirling-PDF project (e.g., reflects PDF operations like splitting, merging, converting, or project maintenance), considering the specific changes in the diff.
+            3. If the title is inadequate (e.g., too vague like "Peter" or not descriptive, rating ≤ 5), suggest one improved PR title that accurately reflects the changes. Use conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keep it concise yet descriptive.
+            4. If a new title is suggested, provide a short explanation of why it better aligns with the changes, focusing on significant improvements over minor wording tweaks, and reference specific changes in the diff.
+            5. If the current title is already clear and appropriate, state that no change is needed and briefly explain why, referencing the diff content.
 
             **Important**: Only suggest a new title if the current one is significantly deficient (e.g., too generic, misleading, or missing context, rating ≤ 5). Avoid iterative refinements like changing "miscellaneous files" to "configuration and scripts" unless the improvement is substantial.
 
