--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -69,7 +69,7 @@ jobs:
           if [[ "$CHANGED_FILES" =~ ^main/resources/messages_[a-zA-Z_]{2}_[a-zA-Z_]{2,7}.properties ]]; then
             CHANGE_SCOPE="${CHANGE_SCOPE}i18n,"
           fi
-          if [[ "$CHANGED_FILES" =~ ^(build.gradle|README.md|\.gitignore) ]]; then
+          if [[ "$CHANGED_FILES" =~ ^(build.gradle|settings.gradle|README.md|\.gitignore) ]]; then
             CHANGE_SCOPE="${CHANGE_SCOPE}config,"
           fi
 
@@ -108,7 +108,7 @@ jobs:
             Please provide:
             1. A rating of the current PR title on a scale of 1 to 10 (1 = worst, 10 = best), based on its clarity, relevance, and alignment with the changes observed in the diff content.
             2. A brief assessment of whether the current PR title is sufficiently clear and relevant to the Stirling-PDF project (e.g., reflects PDF operations like splitting, merging, converting, or project maintenance), considering the specific changes in the diff.
-            3. If the title is inadequate (e.g., too vague like "Peter" or not descriptive, rating ≤ 5), suggest one improved PR title that accurately reflects the changes. Use conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keep it concise yet descriptive.
+            3. If the title is inadequate (e.g., too vague or not descriptive, rating ≤ 5), suggest one improved PR title that accurately reflects the changes. Use conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keep it concise yet descriptive.
             4. If a new title is suggested, provide a short explanation of why it better aligns with the changes, focusing on significant improvements over minor wording tweaks, and reference specific changes in the diff.
             5. If the current title is already clear and appropriate, state that no change is needed and briefly explain why, referencing the diff content.
 
