--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -89,9 +89,9 @@ jobs:
         with:
           model: openai/gpt-4o
           prompt: |
-            You are a senior software engineer reviewing a pull request for Stirling-PDF, a locally hosted web-based PDF manipulation tool built with Gradle. Your task is to evaluate the PR title by analyzing the content of the changed files to understand the nature of the changes. Suggest improvements only if the current title is unclear, overly vague, or misaligned with the changes. Avoid minor or pedantic refinements.
+            You are a senior software engineer reviewing a pull request for Stirling-PDF, a locally hosted web-based PDF manipulation tool built with Gradle. Your task is to generate an independent PR title based on the content of the changed files and compare it to the provided PR title. Suggest improvements only if the provided title is significantly deficient (rating ≤ 5).
 
-            **PR Title:** ${{ github.event.pull_request.title }}
+            **Provided PR Title:** ${{ github.event.pull_request.title }}
 
             **Changed Files:**
             ```
@@ -106,15 +106,15 @@ jobs:
             ```
 
             Please provide:
-            1. A rating of the current PR title on a scale of 1 to 10 (1 = worst, 10 = best), based on its clarity, relevance, and alignment with the changes observed in the diff content.
-            2. A brief assessment of whether the current PR title is sufficiently clear and relevant to the Stirling-PDF project (e.g., reflects PDF operations like splitting, merging, converting, or project maintenance), considering the specific changes in the diff.
-            3. If the title is inadequate (e.g., too vague or not descriptive, rating ≤ 5), suggest one improved PR title that accurately reflects the changes. Use conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keep it concise yet descriptive.
-            4. If a new title is suggested, provide a short explanation of why it better aligns with the changes, focusing on significant improvements over minor wording tweaks, and reference specific changes in the diff.
-            5. If the current title is already clear and appropriate, state that no change is needed and briefly explain why, referencing the diff content.
+            1. An independently generated PR title based solely on the diff content and change scope, using conventional commit style (e.g., `feat:`, `fix:`, `docs:`, `chore:`) and keeping it concise yet descriptive.
+            2. A rating of the provided PR title on a scale of 1 to 10 (1 = worst, 10 = best), based on its clarity, relevance, and alignment with the changes compared to the AI-generated title.
+            3. A brief assessment of whether the provided PR title is sufficiently clear and relevant to the Stirling-PDF project (e.g., reflects PDF operations like splitting, merging, converting, or project maintenance), considering the diff content.
+            4. If the provided title is inadequate (rating ≤ 5), suggest the AI-generated title as an improvement and provide a short explanation of why it better aligns with the changes, referencing specific changes in the diff.
+            5. If the provided title is acceptable (rating ≥ 6), state that no change is needed and briefly explain why, comparing it to the AI-generated title.
 
-            **Important**: Only suggest a new title if the current one is significantly deficient (e.g., too generic, misleading, or missing context, rating ≤ 5). Avoid iterative refinements like changing "miscellaneous files" to "configuration and scripts" unless the improvement is substantial.
+            **Important**: Only suggest the AI-generated title if the provided title is significantly deficient (rating ≤ 5). Avoid iterative refinements like changing "miscellaneous files" to "configuration and scripts" unless the improvement is substantial.
 
-            Keep the response concise and formatted as markdown, with the rating displayed prominently (e.g., "**Rating**: X/10").
+            Keep the response concise and formatted as markdown, with the rating and AI-generated title displayed prominently (e.g., "**Rating**: X/10", "**AI-Generated Title**: ...").
 
       - name: Comment AI Title Suggestion
         env:
