--- a/.github/workflows/ai.yml
+++ b/.github/workflows/ai.yml
@@ -122,8 +122,7 @@ jobs:
             Keep the response concise and formatted as markdown, with the rating and AI-generated title displayed prominently (e.g., "**Rating**: X/10", "**AI-Generated Title**: ...").
 
       - name: Update or Create PR Comment
-        run: |
-          SCRIPT_OUTPUT=${{ steps.ai-title-analysis.outputs.response }}
+        run: echo "SCRIPT_OUTPUT<<EOF" >> $GITHUB_ENV && echo "${{ steps.ai-title-analysis.outputs.response }}" >> $GITHUB_ENV && echo "EOF" >> $GITHUB_ENV
 
       - name: Post comment on PR
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
